2008-09-15  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        https://bugs.webkit.org/show_bug.cgi?id=20634
        SVG transform attribute is ignored by <use> in <clipPath>

        Transform the paths with the local transform when part
        of a clip path.

        Test: svg/custom/use-clipped-transform.svg

        * svg/SVGClipPathElement.cpp:
        (WebCore::SVGClipPathElement::canvasResource):
        * svg/SVGStyledTransformableElement.cpp:
        (WebCore::SVGStyledTransformableElement::toClipPath):
        * svg/SVGStyledTransformableElement.h:

2008-09-15  Dave Hyatt  <hyatt@apple.com>

        Convert Qt over to its ScrollbarTheme.  Add cross-platform support for jumping the thumb location directly
        to a pressed location on the track (this is done with the middle mouse on Qt and with Shift-Click on Windows).
      
        Reviewed by Sam Weinig

        * platform/ScrollBar.cpp:
        (WebCore::thumbUnderMouse):
        (WebCore::Scrollbar::autoscrollPressedPart):
        (WebCore::Scrollbar::startTimerIfNeeded):
        (WebCore::moveThumb):
        (WebCore::Scrollbar::handleMouseMoveEvent):
        (WebCore::Scrollbar::handleMousePressEvent):
        * platform/ScrollBar.h:
        (WebCore::Scrollbar::pressedPos):
        (WebCore::Scrollbar::pixelStep):
        (WebCore::Scrollbar::setPressedPos):
        * platform/ScrollbarTheme.h:
        (WebCore::ScrollbarTheme::thumbPosition):
        (WebCore::ScrollbarTheme::thumbLength):
        (WebCore::ScrollbarTheme::trackPosition):
        (WebCore::ScrollbarTheme::trackLength):
        * platform/ScrollbarThemeComposite.cpp:
        (WebCore::ScrollbarThemeComposite::trackPosition):
        * platform/ScrollbarThemeComposite.h:
        * platform/qt/PlatformScrollBarQt.cpp:
        (WebCore::PlatformScrollbar::PlatformScrollbar):
        (WebCore::):
        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::styleOptionSlider):